{
    "name": "CommonInput",
    "maps": [
        {
            "name": "InGame",
            "id": "2b9b5904-c98c-444b-83ec-e159cd3590dc",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "a06ddbb3-0e23-491f-8b3c-6c941def576e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d585c963-c8da-4727-a8bd-d44313f8d2c0",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InPause",
            "id": "c6897af3-54aa-4538-a873-45ba6dd05963",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "5895497c-c22a-409b-9af0-22bad6a58150",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a75206a5-34ec-4ecf-8502-e36a2eaa29cb",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}